--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-#yhteys mongodb tietokantaa
-MONGOLAB_URI=
-
+SESSION_SECRET=mySecret
+MONGODB_URI=mongodb+srv://jouni:Q2werty@gamehub.inryxue.mongodb.net/GameHub
 
 
